<resources>
    <string name="app_name">Demo</string>
    <string name="sy_start">初始化手印直播</string>
    <string name="sy_login">登录</string>
    <string name="sy_hall">手印大厅</string>
    <string name="sy_follow">关注</string>
    <string name="sy_hot">热门</string>
    <string name="sy_latest">最新</string>
    <string name="sy_watch">观看</string>
    <string name="sy_push">推流</string>
    <string name="sy_custom_watch">自定义观看</string>
    <string name="sy_custom_push">自定义推流</string>
    <string name="start_push">开始推流</string>
    <string name="switch_camera">切换摄像头</string>
    <string name="switch_beauty">美颜开关</string>
    <string name="switch_flash">闪光灯开关</string>
</resources>
