<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="tv.shouyin.showing.open.demo.live.PushActivity">

    <tv.shouyin.showing.open.sdk.widget.SyPusherView
        android:id="@+id/sy_pusher_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" />

    <tv.shouyin.showing.open.sdk.widget.SyChatRoomView
        android:id="@+id/sy_chat_room_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="left|bottom"
        android:layout_marginBottom="60dp"
        android:layout_marginRight="120dp" />

    <Button
        android:id="@+id/start_push"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/start_push" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/switch_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/switch_camera" />

        <CheckBox
            android:id="@+id/switch_beauty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/switch_beauty" />

        <CheckBox
            android:id="@+id/switch_flash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_flash" />

    </LinearLayout>

</FrameLayout>
